# xxfer

./: .gitignore  LICENSE  README.md  client.py  config.yml  example_config.yml  known_hosts.py  main.py  pyproject.toml  receive.py  requirements.txt  send.py  server.py  xfer.py  xxfer.py
docs/: CHANGELOG.md  requirements.txt
src/: __init__.py  client.py  constants.py  example_config.yml  install.py  listener.py  packer.py  sender.py  server.py  xxfer.py
src/configs/: __init__.py  configfile.py  constants.py  knownhosts.py  logfile.py
src/crypt/: crypto.py
src/crypto/: decrypt.py  encrypt.py
src/install/: install.py
xxfer/src/: client.py  example_config.yml  xxfer_version.py
xxfer/src/xxfer/: packer.py  server.py  xfer.py
