[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xxfer"
dynamic = ["version"]
authors = [{ name = "logank", email = "logan.aker1989@gmail.com" }]
description = "package for transferring files across the internet with sockets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/notoriouslogank/xfer.git"
Issues = "https://github.com/notoriouslogank/xfer/issues"

[tool.setuptools.package-data]
config = ["example_config.yml"]
