[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xxfer"
version = "0.2.0"
authors = [{ name = "logank", email = "logan.aker1989@gmail.com" }]
description = "xxfer is a Python package for sending and/or receiving files to/from a remote source.  Both the sender and the receiver must run the application on their respective machines."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/notoriouslogank/xfer.git"
Issues = "https://github.com/notoriouslogank/xfer/issues"
