[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xxfer"
version = "0.4.0"
authors = [{ name = "logank", email = "logan.aker1989@gmail.com" }]
description = "xxfer is a pure Python, end-to-end encrypted file transfer application that runs from the command line (or optional interactive window)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/notoriouslogank/xfer.git"
Issues = "https://github.com/notoriouslogank/xfer/issues"
